--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-title" content="Steppe Compass">
   <title>Steppe Compass</title>
 
-  <link rel="apple-touch-icon" href="icons/yurt.png">
+  <link rel="apple-touch-icon" href="/assets/images/yurt.png">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
