--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,9 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
   <script src="flutter_bootstrap.js" async></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5qVAbC-weHIAStQ2ZQwYKiHN9fCTOUho"></script>
 </body>
